# week-3

./: main.py  pyproject.toml  section_c_clustering.ipynb
Hotel Booking/: .env  Week3_TimeSeries.ipynb  Week3_TimeSeriesClustering_Project_Specification.docx  hotel_booking.py  hotel_bookings.ipynb  main.py  mlflow.db  pyproject.toml
Hotel%20Booking/: mlflow.db
cancer/: Week3_DimReduction_KMeans.ipynb  pyproject.toml
session/: .env  class-session.ipynb  main.py  mlflow.db  pyproject.toml
session/mlruns/0/models/m-019b8e5a5a3c468cb59b18d5e5d4ef68/artifacts/: MLmodel  conda.yaml  python_env.yaml
session/mlruns/0/models/m-7128639f1e644928add7c8c9a15598d9/artifacts/: MLmodel
session/mlruns/0/models/m-82bbd49fa57c4816ba8db07df5d9e041/artifacts/: MLmodel  model.pkl  requirements.txt
session/mlruns/3/models/m-076931f791344319b77a925c04ddfb1e/artifacts/: MLmodel
